@@ -1,3 +1,6 @@
+* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 7.4.0
+- Add AlmaLinux 8 support
+
 * Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.3.0
 - Add RockyLinux 8 support
 
